--- a/Lab05/code/tutorial05_AE.ipynb
+++ b/Lab05/code/tutorial05_AE.ipynb
@@ -13,7 +13,7 @@
     "The [Sloan Digital Sky Survey](https://sloan.org/programs/research/sloan-digital-sky-survey) (SDSS) exemplifies the longstanding tradition of researchers in astronomy, astrophysics, and cosmology of making data public. The SDSS provides a wealth of astrophysical and astronomical data that have been used for research-level work as well as for educational purposes. The collaborations at the Large Hadron Collider at CERN also release their data, albeit with a longer latency than is typical in astronomy. \n",
     "\n",
     "#### SDSS Color Data for Stars\n",
-    "Astronomers characterize the color of celestial objects using the fluxes measured through 5 SDSS filters:\n",
+    "SDSS stronomers characterize the color of celestial objects using the fluxes measured through 5 SDSS filters:\n",
     "\n",
     "| __Filter__        | __Wavelength (nm)__   |\n",
     "| :---              | :--   |\n",
