use N and n for the dimensions of x and z, respectively

--- a/Lab05/code/tutorial05_AE.ipynb
+++ b/Lab05/code/tutorial05_AE.ipynb
@@ -23,9 +23,9 @@
     "| Near Infrared (i) | 762.5 |\n",
     "| Infrared (z)      | 913.4 |\n",
     "\n",
-    "In this notebook we use a simple __autoencoder__ to search for structure in the SDSS stellar color data.  Given two spaces $x \\in \\mathbb{R}^n$ and $z \\in \\mathbb{R}^m$, where $m \\ll n$, an autoencoder models the mappings $h: x \\rightarrow z$ followed by $g: z \\rightarrow x$. The first mapping is called the __encoder__ and the second mapping is called the __decoder__. The low-dimensional space $\\mathbb{R}^m$ is called the __latent space__. \n",
+    "In this notebook we use a simple __autoencoder__ to search for structure in the SDSS stellar color data.  Given two spaces $x \\in \\mathbb{R}^N$ and $z \\in \\mathbb{R}^n$, where $n \\ll N$, an autoencoder models the mappings $h: x \\rightarrow z$ followed by $g: z \\rightarrow x$. The first mapping is called the __encoder__ and the second mapping is called the __decoder__. The low-dimensional space $\\mathbb{R}^n$ is called the __latent space__. \n",
     "\n",
-    "There is no reason, *a priori*, why an autoencoder should cluster data in the latent space; an autoencoder simply creates a compressed representation of the original data. However, if clusters exist in the original space $\\mathbb{R}^n$ one would expect these clusters to be mapped to clusters in the latent space provided that in approximating the identity mapping $h: x \\rightarrow z$ and $g: z \\rightarrow x$  sufficient information is retained in the compressed data in the latent space. \n",
+    "There is no reason, *a priori*, why an autoencoder should cluster data in the latent space; an autoencoder simply creates a compressed representation of the original data. However, if clusters exist in the original space $\\mathbb{R}^N$ one would expect these clusters to be mapped to clusters in the latent space provided that in approximating the identity mapping $h: x \\rightarrow z$ and $g: z \\rightarrow x$  sufficient information is retained in the compressed data in the latent space. \n",
     "\n",
     "The data used in this example have been extracted from the SDSS website\n",
     "\n",
