fix typos in sdeutil

--- a/Lab07/code/sdeutil.ipynb
+++ b/Lab07/code/sdeutil.ipynb
@@ -37,7 +37,7 @@
     " & \\propto \\exp \\left(-\\frac{1}{2}  z^2 \\right). \n",
     "\\end{align}\n",
     "\n",
-    "If $\\alpha_t$ is chosen so that is goes to zero as $t \\rightarrow 1$ and $\\sigma_t$ remains finite in that limit then the terminal state $x_1$ will be distributed according to a zero mean diagonal $d$-dimensional normal with variance $\\sigma_1^2$ irrespective of the initial state $x_0$. The $d$-dimensional Gaussian is a **fixed point** of the SDE. \n",
+    "If $\\alpha_t$ is chosen so that it goes to zero as $t \\rightarrow 1$ and $\\sigma_t$ remains finite in that limit then the terminal state $x_1$ will be distributed according to a zero mean diagonal $d$-dimensional normal with variance $\\sigma_1^2$ irrespective of the initial state $x_0$. The $d$-dimensional Gaussian is a **fixed point** of the SDE. \n",
     "Bao *et al.* [2] suggest the following choices\n",
     "\\begin{align}\n",
     "    \\alpha_t & = 1 - t, \\\\\n",
@@ -67,7 +67,7 @@
     "                & = \\frac{1}{p(x_t)}\\nabla_{x_t} p(x_t), \\quad p(x_t) = \\int_{\\mathbb{R}^d}   p(x_t | x_0) \\, p(x_0) \\, dx_0, \\nonumber\\\\\n",
     "        & = -\\frac{1}{p(x_t)}\\int_{\\mathbb{R}^d} \\left(\\frac{x_t - \\alpha_t x_0}{\\sigma_t^2} \\right) p(x_t | x_0) \\, p(x_0) \\, dx_0,\\nonumber\\\\\n",
     "        & = - \\frac{1}{\\sigma_t^2} \\left(x_t - \\alpha_t \\int_{\\mathbb{R}^d}  x_0 \\, \\frac{p(x_t | x_0) \\, p(x_0)}{p(x_t)} \\, dx_0 \\right),\\\\\n",
-    "\\rightarrow \\sigma_t^2 \\,     S(t, x_t)        & = \\alpha_t \\, q(t, x_t) - x_t,\n",
+    "\\rightarrow \\, -\\sigma_t^2 \\,     S(t, x_t)        & = x_t - \\alpha_t \\, q(t, x_t),\n",
     "\\end{align}\n",
     "where the vector\n",
     "\\begin{align}\n",
@@ -120,7 +120,7 @@
     "        \\quad\\text{where } \\\\\n",
     "w(x_t, x_0^{(n)}) & = \\frac{p(x_t | x_0^{(n)})}{\\sum_{m=1}^N p(x_t | x_0^{(m)})},                \n",
     "\\end{align}\n",
-    "and $\\{ x_0^{(n)} \\}, n = 1,\\cdots, N$ is a sample drawn from $p(x_0)$. Note\n",
+    "and $\\{ x_0^{(n)} \\}, n = 1,\\cdots, N$ is a sample drawn from $p(x_0)$. \n",
     "\n",
     "The function $\\lambda(x_t, x_0)$ has an interesting interpretation as can be seen by writing it as follows,\n",
     "\\begin{align}\n",
