try to cope with large negative values of zz in exp(-zz/2)

--- a/Lab07/code/sdeutil.ipynb
+++ b/Lab07/code/sdeutil.ipynb
@@ -12,9 +12,9 @@
     "## Introduction\n",
     "Let $x_t \\equiv x(t) \\in \\mathbb{R}^d$ be a $d$-dimensional vector defined on the domain $t \\in [0, 1]$. Let $x_0 \\sim p(x)$ be the **initial state** sampled from the probability density $p(x)$ and $x_1$ be the **terminal state**, that is, the state at the end of the trajectory that begins with $x_0$. Following the notation of [1], the path from $x_0$ to $x_1$ is the solution of the **forward stochastic differential equation** (SDE)\n",
     "\\begin{align}\n",
-    "    dx_t = {\\color{blue}f(t) x_t dt} + {\\color{darkmagenta}g(t) dW_t},\n",
+    "    dx_t = {\\color{blue}f(t) x_t dt} + {\\color{magenta}g(t) dW_t},\n",
     "\\end{align}\n",
-    "where ${\\color{blue}f(t) x_t dt}$, the **drift term**, is deteministic and ${\\color{darkmagenta}g(t) dW_t} = g(t) z \\sqrt{dt}$ is a **stochastic term** with $z \\sim {\\cal N}(0, \\mathbf{I}_d)$ a $d$-dimensional random variable from a diagonal $d$-dimensional standard normal.  Because of the stochastic term $x_t$ is also a random variable. One might be tempted to write the above equation in terms of $dx_t / dt$,  however, the path from $x_0$ to $x_t$ is infinitely corrugated and, consequently, is nowhere differentiable!  \n",
+    "where ${\\color{blue}f(t) x_t dt}$, the **drift term**, is deteministic and ${\\color{magenta}g(t) dW_t} = g(t) z \\sqrt{dt}$ is a **stochastic term** with $z \\sim {\\cal N}(0, \\mathbf{I}_d)$ a $d$-dimensional random variable from a diagonal $d$-dimensional standard normal.  Because of the stochastic term $x_t$ is also a random variable. One might be tempted to write the above equation in terms of $dx_t / dt$,  however, the path from $x_0$ to $x_t$ is infinitely corrugated and, consequently, is nowhere differentiable!  \n",
     "\n",
     "In [1] it is shown that if one chooses\n",
     "\\begin{align}\n",
@@ -345,21 +345,37 @@
     "        # z.shape: (N, B, d)\n",
     "        if debug:\n",
     "            print('  PyFlowODE.q: z.shape', z.shape)\n",
+    "            print('  PyFlowODE.q: z', z)\n",
     "\n",
     "        # sum over arguments of exponential, that is, over the d-dimensions\n",
     "        # of each element in x0, so that we get the product of d normal densities.    \n",
     "        zz = z*z\n",
     "        zz = zz.sum(dim=-1) # sum over last axis\n",
-    "\n",
-    "        # compute unormalized probability densities\n",
+    "        \n",
+    "        # to reduce the probability of overflows,\n",
+    "        # subtract from zz its manimum value. This is\n",
+    "        # ok because exp(-zz.min()/2) will cancel in the\n",
+    "        # weight.\n",
+    "        zzmin = zz.min()\n",
+    "        zzmax = zz.max()\n",
+    "        zz -= zzmin\n",
+    "        \n",
+    "        if debug:\n",
+    "            print('  PyFlowODE.q: zz.shape', zz.shape)\n",
+    "            print('  PyFlowODE.q: zzmin, zzmax', zzmin, zzmax)\n",
+    "            print('  PyFlowODE.q: zz', zz)\n",
+    " \n",
+    "        # compute unnormalized probability densities\n",
     "        pt = torch.exp(-zz/2)\n",
     "        # pt.shape: (N, B)\n",
     "        if debug:\n",
     "            print('  PyFlowODE.q: pt.shape', pt.shape)\n",
+    "            print('  PyFlowODE.q: pt', pt)\n",
     "\n",
     "        # compute weight by dividing by the sum over the B Gaussian densities,\n",
     "        # which, in general, is the last axis\n",
     "        pt_sum = pt.sum(dim=-1)\n",
+    "        \n",
     "        # pt_sum.shape: (N, )\n",
     "        if pt_sum.any() == 0:\n",
     "            raise ValueError(f'''\n",
