add more comments in GNN tutorial

--- a/Lab08/code/tutorial08_GNN.ipynb
+++ b/Lab08/code/tutorial08_GNN.ipynb
@@ -128,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████| 36000/36000 [00:04<00:00, 8145.93it/s]\n"
+      "100%|███████████████████████████████████| 36000/36000 [00:04<00:00, 8095.06it/s]\n"
      ]
     },
     {
@@ -477,7 +477,7 @@
     "\\end{align}\n",
     "that is, a linear function to which a nonlinear operation, $\\sigma(*)$, is applied (usually, element wise), followed by another linear function involving the adjacency matrix, which is then subject to a nonlinear operation. \n",
     "\n",
-    "For each vertex, the matrix operation $A X$ computes a weighted sum of the features of its neighboring vertices. Since we're following the IceCube model, for a given vertex all other vertices are its neighbors. However, the closer neighbors are weighted more than those further away. The tunable parameter $\\alpha$ in the adjacency matrix $A$ determines the scale of the nearest neighbor domains. For each vertex, whose feature vector is now of dimension $h$, $h$ weighted sums of its features are computed using the $h$ columns of the $h \\times h$ matrix of parameters $w$. The same bias $b$ is added to every element of the resulting $(n, h)$-shaped matrix and, finally, each element is subjected to a nonlinear function. \n",
+    "For each vertex, the matrix operation $A X$ computes a weighted sum of the features of its neighboring vertices. Since we're following the IceCube model, for a given vertex all other vertices are its neighbors. However, the closer neighbors are weighted more than those further away. The tunable parameter $\\alpha$ in the adjacency matrix $A$ determines the scale of the nearest neighbor domains. For each vertex, whose feature vector is now of dimension $\\texttt{n\\_embed} = h$, $h$ weighted sums of its features are computed using the $h$ columns of the $h \\times h$ matrix of parameters $w$. The same bias $b$ is added to every element of the resulting $(n, h)$-shaped matrix and, finally, each element is subjected to a nonlinear function. \n",
     "\n",
     "IceCube uses concatenations in their award-winning implementation. We avoid concatenations in our implememntation because they are rather sluggish in PyTorch and slow down training significantly."
    ]
@@ -549,16 +549,16 @@
    "source": [
     "class GNN(nn.Module):\n",
     "    \n",
-    "    def __init__(self, n_dim, n_width=40):\n",
+    "    def __init__(self, n_dim, n_embed=40):\n",
     "\n",
     "        # initialize base class\n",
     "        super().__init__()\n",
     "\n",
     "        self.edges  = Edges()\n",
-    "        self.gconv1 = GCNLayer(n_dim,   n_width)\n",
-    "        self.gconv2 = GCNLayer(n_width, n_width)\n",
+    "        self.gconv1 = GCNLayer(n_dim,   n_embed)\n",
+    "        self.gconv2 = GCNLayer(n_embed, n_embed)\n",
     "        self.vsum   = VerticalSum()\n",
-    "        self.linear = nn.Linear(n_width, 1)\n",
+    "        self.linear = nn.Linear(n_embed, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "\n",
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,20 +955,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    200001|100.00%|00:13:59/00:00:00| 238.3 it/s|      499800|  0.28947806|  0.21341617|\n",
-      "\n"
+      "    210001| 42.00%|00:14:22/00:19:50| 243.6 it/s|      209900|  0.27895904|  0.22529925|"
      ]
     }
    ],
    "source": [
-    "DELETE_LOSS_FILE = False\n",
+    "DELETE_LOSS_FILE = True\n",
     "\n",
     "if DELETE_LOSS_FILE:\n",
     "    os.system(f'rm -f {loss_file:s}')\n",
