--- a/Labs/Lab01/code/perceptron.ipynb
+++ b/Labs/Lab01/code/perceptron.ipynb
@@ -254,7 +254,7 @@
     "# instantiate a linear function with 3 inputs and 2 outputs\n",
     "linear = torch.nn.Linear(3, 2)\n",
     "\n",
-    "# instantiate a relu function that will apply itelf\n",
+    "# instantiate a relu function that will be applied\n",
     "# elementwise to its matrix argument.\n",
     "relu = torch.nn.ReLU()\n",
     "\n",
