--- a/Labs/Lab09/code/tutorial09_transformer.ipynb
+++ b/Labs/Lab09/code/tutorial09_transformer.ipynb
@@ -326,24 +326,24 @@
     "\n",
     "if short_tutorial:\n",
     "    \n",
-    "    MAX_SEQ_LEN = 85\n",
-    "    BATCH_SIZE  = 32\n",
-    "    filename = pathname('../data/seq2seq_series_2terms.txt')\n",
-    "\n",
+    "    filename = pathname('../data/seq2seq_series_2terms.txt')    \n",
+    "    \n",
+    "    MAX_SEQ_LEN   = 85\n",
     "    BATCH_SIZE    = 32\n",
+    "    DROPOUT       = 0.05\n",
     "    LEARNING_RATE = 2e-4\n",
     "    NITERATIONS   = 400000\n",
     "    STEP          =    100\n",
     "    \n",
     "else:\n",
-    "    \n",
-    "    MAX_SEQ_LEN = 200\n",
-    "    BATCH_SIZE  = 64\n",
+    "\n",
     "    filename = pathname('../data/seq2seq_series.txt')\n",
     "    \n",
+    "    MAX_SEQ_LEN   = 200\n",
     "    BATCH_SIZE    = 64\n",
+    "    DROPOUT       = 0.05\n",
     "    LEARNING_RATE = 2e-4\n",
-    "    NITERATIONS   = 500000\n",
+    "    NITERATIONS   = 400000\n",
     "    STEP          =    100\n",
     "\n",
     "FTRAIN = 17\n",
