--- a/Labs/Lab06/code/tutorial06_PINN1.ipynb
+++ b/Labs/Lab06/code/tutorial06_PINN1.ipynb
@@ -42,13 +42,13 @@
     "where $A$ and $\\phi$ are constants to be determined by the initial conditions and where it is understood that we'll take the real part of $x(z)$ at the end. One finds $q = i \\zeta \\pm \\sqrt{1 - \\zeta^2}$. Taking the positive value of $\\sqrt{1 - \\zeta^2}$ and restricting to the (underdamped) condition $\\zeta < 1$ the exact solution is given by\n",
     "\\begin{align}\n",
     "    x(z) & = A \\exp(-\\zeta z) \\, \\cos\\left(z \\sqrt{1-\\zeta^2} + \\phi\\right)  \\quad\\text{and} \\\\\n",
-    "    \\phi & = \\arctan\\left(-\\frac{(\\zeta + v_0 / x_0)}{\\sqrt{1 - \\zeta^2}}\\right), \\quad A = \\frac{x_0}{\\cos\\phi} .\n",
+    "    A & = \\frac{x_0}{\\cos\\phi}, \\quad \\phi  = \\arctan\\left[-\\frac{(\\zeta + v_0 / x_0)}{\\sqrt{1 - \\zeta^2}}\\right], \n",
     "\\end{align}\n",
     "In terms of the original parameters, \n",
     " the exact solution of the ODE for $\\zeta < 1$, that is, $\\omega_0 > \\lambda$, is \n",
     "\\begin{align}\n",
     "    x(t) & = A \\exp(-\\lambda t) \\, \\cos(\\omega \\, t + \\phi), \\quad\\text{with } \\omega = \\sqrt{\\omega_0^2 - \\lambda^2} \\quad\\text{and} \\\\\n",
-    "    \\phi & = \\arctan(-(\\lambda + v_0 / x_0) \\, / \\, \\omega), \\quad A = x_0 \\, / \\, \\cos\\phi , \n",
+    "  A & = x_0 \\, / \\, \\cos\\phi , \\quad   \\phi  = \\arctan[-(\\lambda + v_0 / x_0) \\, / \\, \\omega], \n",
     "\\end{align}\n",
     "with $v_0$ now defined to be $v_0 = dx(0) / dt$ rather than $dx(0) / dz$.\n",
     "\n",
@@ -83,7 +83,7 @@
    "source": [
     "# standard system modules\n",
     "import os, sys\n",
-    "sys.path.append('../../python')\n",
+    "sys.path.append('../../../python')\n",
     "\n",
     "# standard module for tabular data\n",
     "import pandas as pd\n",
@@ -105,8 +105,8 @@
     "\n",
     "# a simple time left function.\n",
     "# to monitor the training do\n",
-    "# python monitor_losses.py losses.csv\n",
-    "from lossmonitor import TimeLeft\n",
+    "# monitor_losses.py losses.csv\n",
+    "import lossmonitor as lm\n",
     "\n",
     "# update fonts\n",
     "FONTSIZE = 10\n",
@@ -166,7 +166,7 @@
     "    a = np.sqrt(1 - zeta**2)\n",
     "    phi = np.arctan(-(zeta + v0/x0)/a)\n",
     "    A = x0 / np.cos(phi)\n",
-    "    x = A * torch.exp(-zeta*z) * torch.cos(z*a + phi)\n",
+    "    x = A * torch.exp(-zeta*z) * torch.cos(a*z + phi)\n",
     "    return x"
    ]
   },
@@ -680,7 +680,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
