--- a/test.ipynb
+++ b/test.ipynb
@@ -5,7 +5,14 @@
    "id": "b6da8301-9d69-4936-a178-0a0b718eaf4e",
    "metadata": {},
    "source": [
-    "# Test Imports"
+    "# Test $\\texttt{miniconda3}$ installation\n",
+    "\n",
+    "## Tips\n",
+    "\n",
+    "  * Use __esc r__ to disable a cell\n",
+    "  * Use __esc y__ to reactivate it\n",
+    "  * Use __esc m__ to go to markdown mode\n",
+    "  * Press Shift then hit return to execute a cell\n"
    ]
   },
   {
@@ -27,6 +34,14 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7091b097-2a36-4521-af28-a9ce68e594b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -45,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
