Week01 complete more or less

--- a/test.ipynb
+++ b/test.ipynb
@@ -28,11 +28,15 @@
     "import sympy as sm\n",
     "import scipy as sp\n",
     "import torch\n",
+    "import json\n",
+    "\n",
     "# standard measures of model performance\n",
     "from sklearn.metrics import roc_curve, auc\n",
     "import matplotlib as mp\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "# ML in Physics module\n",
+    "import mlinphysics.nn as ml"
    ]
   },
   {
